force-app/main/default/objects/EV_VariablePublicoOjetivo__c/EV_VariablePublicoOjetivo__c.object-meta.xml
<CustomObject>
    <description>Objeto que recogerá el catálogo de las variables para seleccionar el público objetivo de un evento</description>
    <label>Variable público objetivo</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre de Variable</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Variables público objetivo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>