force-app/main/default/objects/EV_VariablePublicoOjetivo__c/fields/EV_CategoriaVariable__c.field-meta.xml
<CustomField>
    <fullName>EV_CategoriaVariable__c</fullName>
    <description>La categoría a la que pertenece cada variable</description>
    <label>Categoría de variable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Intereses</fullName>
            </value>
            <value>
                <fullName>Producto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>