force-app/main/default/objects/EV_VariablePublicoOjetivo__c/fields/EV_Order__c.field-meta.xml
<CustomField>
    <fullName>EV_Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>