force-app/main/default/objects/EV_VariablePublicoOjetivo__c/fields/EV_TipoVariable__c.field-meta.xml
<CustomField>
    <fullName>EV_TipoVariable__c</fullName>
    <description>Tipo de la variable de Adobe Campaign</description>
    <label>Tipo de variable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Numérico</fullName>
            </value>
            <value>
                <fullName>Texto</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>