force-app/main/default/objects/EV_VariablePublicoOjetivo__c/fields/EV_VariableAdobeCampaign__c.field-meta.xml
<CustomField>
    <fullName>EV_VariableAdobeCampaign__c</fullName>
    <description>Nombre que tiene la variable en Adobe Campaign para tener la equivalencia</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Variable Adobe Campaign</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>